# mergehex-rs

./: AGENTS.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
src/: elf.rs  hex.rs  input.rs  lib.rs  main.rs  memory.rs
tests/: integration.rs
